Adjusted documentation and minor code fixes
